<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MovieFragment"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/movie_name"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_photo"
        android:ellipsize="end"
        android:textSize="15sp"
        android:maxLines="6"
        android:text="@string/lorem" />

</RelativeLayout>